# CLOptParser

./: .gitignore  CMakeLists.txt  README.md
examples/: basic.cpp
src/: main.cpp  opexception.cpp  opexception.hpp  optgroup.cpp  optgroup.hpp  option.cpp  option.hpp  optparser.cpp  optparser.hpp
tests/: basic.cpp
tests/unit/: optiontest.cpp
